[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cml-pyats-validator"
version = "0.1.0"
description = "MCP server for CML device validation using PyATS parsers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyats>=24.0",
    "genie>=24.0",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
cml-pyats-validator = "cml_pyats_validator.server:main"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
